Remove "splurious interrupt" message. The IRQ might be shared. Fixes PR/11410